# interchange_audit

./: .pre-commit-config.yaml  README.rst  analysis.py  pyproject.toml
data/collected/: dominion_interchange_transfers.csv  manukau_interchange_transfers.csv  mt_eden_interchange_transfers.csv  sandringham_interchange_transfers.csv
outputs/: Dominion Interchange.html  Manukau Interchange.html  Mt Eden Interchange.html  Sandringham Interchange.html  dominion_interchange_median_hourly_transfers_chart.html  dominion_interchange_median_num_transfers_by_day_of_week_chart_202503.html  dominion_interchange_median_num_transfers_by_hour_chart.html  dominion_summary.md  manukau_interchange_median_hourly_transfers_chart.html  manukau_interchange_median_num_transfers_by_day_of_week_chart_202503.html  manukau_interchange_median_num_transfers_by_hour_chart.html  manukau_summary.md  mt_eden_interchange_median_hourly_transfers_chart.html  mt_eden_interchange_median_num_transfers_by_day_of_week_chart_202503.html  mt_eden_interchange_median_num_transfers_by_hour_chart.html  mt_eden_summary.md  sandringham_interchange_median_hourly_transfers_chart.html  sandringham_interchange_median_num_transfers_by_day_of_week_chart_202503.html  sandringham_interchange_median_num_transfers_by_hour_chart.html  sandringham_summary.md
